@@ -28,25 +28,19 @@ class UserControllerTest {
 
 	@Test
 	void getUsers_returnsUserDTOList() {
-		UserDTO user1 = new UserDTO();
-		user1.userId = 1L;
-		user1.name = "Alice";
-		user1.email = "alice@example.com";
-		UserDTO user2 = new UserDTO();
-		user2.userId = 2L;
-		user2.name = "Bob";
-		user2.email = "bob@example.com";
+		UserDTO user1 = new UserDTO(1L, "Alice", "alice@example.com", List.of(), List.of());
+		UserDTO user2 = new UserDTO(2L, "Bob", "bob@example.com", List.of(), List.of());
 		List<UserDTO> userList = Arrays.asList(user1, user2);
 		when(userService.getUsers()).thenReturn(Observable.just(userList));
 
 		List<UserDTO> result = userController.getUsers(context).blockingFirst();
 
 		assertThat(result).hasSize(2);
-		assertThat(result.getFirst().userId).isEqualTo(1L);
-		assertThat(result.get(0).name).isEqualTo("Alice");
-		assertThat(result.get(0).email).isEqualTo("alice@example.com");
-		assertThat(result.get(1).userId).isEqualTo(2L);
-		assertThat(result.get(1).name).isEqualTo("Bob");
-		assertThat(result.get(1).email).isEqualTo("bob@example.com");
+		assertThat(result.getFirst().userId()).isEqualTo(1L);
+		assertThat(result.get(0).name()).isEqualTo("Alice");
+		assertThat(result.get(0).email()).isEqualTo("alice@example.com");
+		assertThat(result.get(1).userId()).isEqualTo(2L);
+		assertThat(result.get(1).name()).isEqualTo("Bob");
+		assertThat(result.get(1).email()).isEqualTo("bob@example.com");
 	}
 }
